quorum/test/tests/TypeChecker/Pass/ImpAssignBoolObjBoolObjWrapped.quorum
class Main
    action Main
        Boolean b
        b:SetValue(true)
        Boolean bool = b
    end
end