quorum/test/tests/TypeChecker/Fail/ImpAssignNumberBoolObjWrapped.quorum
class main
    action main
        Boolean bool
        bool:setValue(true)
        number n = bool
    end
end